# docs/swagger.yaml
@@ -1,22 +1,5 @@
 basePath: /
 definitions:
-  customer.Customer:
-    properties:
-      email:
-        type: string
-      firstName:
-        type: string
-      id:
-        type: string
-      importance:
-        type: integer
-      inactive:
-        type: boolean
-      lastName:
-        type: string
-      middleName:
-        type: string
-    type: object
   echo.HTTPError:
     properties:
       message: {}
@@ -132,6 +115,23 @@ definitions:
     - importance
     - lastName
     type: object
+  model.Customer:
+    properties:
+      email:
+        type: string
+      firstName:
+        type: string
+      id:
+        type: string
+      importance:
+        type: integer
+      inactive:
+        type: boolean
+      lastName:
+        type: string
+      middleName:
+        type: string
+    type: object
 host: localhost:3000
 info:
   contact:
@@ -149,7 +149,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Verifies provided credentials, sign auth and refresh token
+      description: Verifies provided credentials, sign jwt and refresh token
       parameters:
       - description: User credentials
         in: body
@@ -205,7 +205,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Sign new auth and refresh token
+      description: Sign new jwt and refresh token
       parameters:
       - description: Fingerprint and refresh token id
         in: body
@@ -228,7 +228,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/echo.HTTPError'
-      summary: Refresh auth
+      summary: Refresh jwt
       tags:
       - auth
   /api/auth/signup:
@@ -271,7 +271,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/customer.Customer'
+              $ref: '#/definitions/model.Customer'
             type: array
         "400":
           description: Bad Request
@@ -303,7 +303,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
@@ -360,7 +360,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
@@ -397,7 +397,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
@@ -421,7 +421,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/customer.Customer'
+              $ref: '#/definitions/model.Customer'
             type: array
         "400":
           description: Bad Request
@@ -453,7 +453,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
@@ -510,7 +510,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
@@ -547,7 +547,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/customer.Customer'
+            $ref: '#/definitions/model.Customer'
         "400":
           description: Bad Request
           schema:
